# cplex-wrapper

./: .gitignore  pyproject.toml
app/: main.py  routes.py
app/core/: config.py  errors.py
cplex/: Dockerfile  amd64.Dockerfile  input.xlsm  model.mod
